4_gpu_gateway/envoy.yaml
static_resources:
  clusters:
  - connect_timeout: 0.25s
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: svc_model
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 192.100.100.100
                port_value: 5001
        - endpoint:
            address:
              socket_address:
                address: 192.200.200.200
                port_value: 5002
    name: svc_model
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /home/envoy/client.crt
            private_key:
              filename: /home/envoy/client.key
          validation_context:
            trusted_ca:
              filename: /home/envoy/ca.crt
    type: STATIC
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 5001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          http2_protocol_options: {}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - '*'
              name: local_service
              routes:
              - match:
                  prefix: /
                route:
                  cluster: svc_model
          stat_prefix: ingress_http
    name: app
